Implemented new changes